--- a/FirstPrj/WebContent/second.html
+++ b/FirstPrj/WebContent/second.html
@@ -10,10 +10,10 @@ module.controller("FirstController",function($scope){
 });
 </script>
 </head>
-<body ng-app="FirstApp"  ng-controller="FirstController">
-Your name <input type="text" ng-model="nm">
+<body data-ng-app="FirstApp"  data-ng-controller="FirstController">
+Your name <input type="text" data-ng-model="nm">
 <br>
-Welcome <label ng-bind="nm"></label>
+Welcome <label data-ng-bind="nm"></label>
 <br>
 
 </body>
