--- a/FirstPrj/WebContent/imagestest.html
+++ b/FirstPrj/WebContent/imagestest.html
@@ -14,6 +14,7 @@ height: 80px;
 var module=angular.module("LoginApp",[]);
 module.controller("loginController", function($scope) {
 	$scope.image="Desert";
+	//$scope.imageFile="images/"+$scope.image+".jpg";
 });
 </script>
 </head>
